# PIRQ_Draft

./: README.md
Module 1/: README.md
Module 1/1_Simple_Function/: README.md
Module 1/C:C++/: README.md  f.c
Module 1/C_C++/: README.md  f.ll
Module 1/Julia/: README.md
Module 1/More_Example/: README.md
Module 1/More_Examples/: README.md
Module 1/OOP_exs/: README.md  qubit.cpp  qubit.ll
Module 1/Python/: README.md  f.ll  f.py  lexical_analysis.docx
Module 1/Rust/: README.md  f.mir  f.rs
Module 1/structs/: README.md
Module 2/: README.md  qasm3Parser.g4
Module 2/1_Intro_Quantum_Parsers_and_ASTs/: README.md
Module 2/1_Language_Specific_Phase_(LSP)/: README.md
Module 2/2_Generic_Phase_(GP)/: Bernstein-Vazirani.csproj  Old_Program.txt  Program.qs  README.md  README_Trans_and_Opt.md
Module 2/2_Transpilation_and_Optimization/: README.md
Module 2/3_IR_Analysis/: README.md
Module 2/3_Target_Specific_Phase_(TSP)/: README.md  Transpilation_Process_Gate_Optimization.ipynb
Module 2/5_QHAL_HAD_Backend/: HAD_Backend.ipynb  README.md
Module 2/Amazon_Bracket/: README.md
Module 3/: README.md
Module 3/Rust/Option1_RustPlugins/quantum_proc_macro/: Cargo.toml  QCOR_Compatible_B-V_transpiled_Superconducting_qc3.qasm  README.md  Result.bc  Result.bc.bc  Result.ll
Module 3/Rust/Option1_RustPlugins/quantum_proc_macro/examples/: simple.rs
Module 3/Rust/Option1_RustPlugins/quantum_proc_macro/src/: lib.rs
Module 3/Rust/Option2_RustMacros/quantum_kernel_macro/: Cargo.toml
Module 3/Rust/Option2_RustMacros/quantum_kernel_macro/src/: bell.qasm  main.ll  main.rs
(+202 files in other folders)
