[package]
name = "quantum_proc_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.21"
syn = "1.0.99"
openqasm = "0.1.2"
proc-macro-error = "1.0"
tempfile = "3"
